[package]
name = "cr"
version = "0.1.0"
edition = "2021"

[features]
default = ["as-bytes"]
# as-bytes features 需要依赖 crate bytemuck
as-bytes = ["bytemuck"]
argb = []
grb = []

[package.metadata.docs.rs]
features = ["argb", "as-bytes"]

[dependencies]
bytemuck = { version = "1.14.0", optional = true }
